upload, modify, download done

--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "cra-boilerplate",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://cors-anywhere.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "html-to-image": "^0.1.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "localforage": "^1.9.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
+    "react-image-crop": "^8.6.4",
+    "react-on-images-loaded": "^2.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
