--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aws-sdk": "^2.731.0",
+    "dotenv": "^8.2.0",
     "html-to-image": "^0.1.1",
     "html2canvas": "^1.0.0-rc.5",
     "localforage": "^1.9.0",
@@ -17,7 +19,8 @@
     "react-image-crop": "^8.6.4",
     "react-on-images-loaded": "^2.2.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-s3": "^1.3.1",
+    "react-scripts": "^3.4.2",
     "styled-components": "^5.1.1",
     "xlsx": "^0.16.4"
   },
