--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aws-sdk": "^2.731.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "html-to-image": "^0.1.1",
     "html2canvas": "^1.0.0-rc.5",
+    "http": "0.0.1-security",
     "localforage": "^1.9.0",
     "node-sass": "^4.14.1",
+    "puppeteer": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
@@ -20,7 +25,7 @@
     "react-on-images-loaded": "^2.2.5",
     "react-router-dom": "^5.1.2",
     "react-s3": "^1.3.1",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
     "xlsx": "^0.16.4"
   },
