--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MSL-J.github.io/JQ_merch",
   "name": "cra-boilerplate",
   "version": "0.1.0",
   "private": true,
@@ -37,7 +38,9 @@
     "eject": "react-scripts eject",
     "server": "nodemon crawler.js",
     "client": "npm run start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,6 +60,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.2"
   }
 }
