--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "http": "0.0.1-security",
     "localforage": "^1.9.0",
+    "n": "^6.7.0",
     "node-sass": "^4.14.1",
     "puppeteer": "^5.2.1",
     "react": "^16.13.1",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-s3": "^1.3.1",
     "react-scripts": "^3.4.3",
+    "stable": "^0.1.8",
     "styled-components": "^5.1.1",
     "xlsx": "^0.16.4"
   },
