crawling readme added

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "client": "npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run clean && gh-pages -b gh-pages -d build",
+    "clean": "rm -rf node_modules/gh-pages/.cache"
   },
   "eslintConfig": {
     "extends": "react-app"
