--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "client": "npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "predeploy": "npm run build",
-    "deploy": "npm run clean && gh-pages -d build -b deploy -e build",
+    "deploy": "npm run clean && gh-pages -d build -b gh-pages -e build",
     "clean": "rm -rf node_modules/gh-pages/.cache"
   },
   "eslintConfig": {
